--- a/informix-db/informix_inf.env
+++ b/informix-db/informix_inf.env
@@ -10,6 +10,7 @@ export ONCONFIG=onconfig
 export LD_LIBRARY_PATH="${INFORMIXDIR}/lib:${INFORMIXDIR}/lib/esql:${LD_LIBRARY_PATH}"
 
 export INFORMIX_DATA_DIR=$BASEDIR/data
+export INFORMIX_CONFIG_DIR=$BASEDIR/config
 export INFORMIXSQLHOSTS=$INFORMIXDIR/etc/sqlhosts
 
 export INIT_LOG=$INFORMIX_DATA_DIR/init_status.log
