--- a/informix-db/IFX_FILES/Dockerfile.debian-os
+++ b/informix-db/IFX_FILES/Dockerfile.debian-os
@@ -14,6 +14,7 @@ RUN apt-get -y install openssh-server
 RUN apt-get -y install vim
 RUN apt-get -y install sudo
 
+RUN apt-get install -y gcc
 
 #RUN apt-get install -y openjdk-7-jre 
 #RUN apt-get -y install openjdk-8-jdk
